samples/_failures_safe/1761292752_e8b548_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72be89f7.c: In function ‘decompress_file’:
./samples/SAFE/__tmp_72be89f7.c:168:36: error: expected ‘)’ at end of input
  168 |             if (i + 1 >= bytes_read
      |                ~                   ^
      |                                    )
./samples/SAFE/__tmp_72be89f7.c:168:13: error: expected declaration or statement at end of input
  168 |             if (i + 1 >= bytes_read
      |             ^~
./samples/SAFE/__tmp_72be89f7.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72be89f7.c:168:13: error: expected declaration or statement at end of input
